Some restyling to stop the blockchain overflowing (#26)

--- a/packages/letters-of-credit/src/stylesheets/sass/components/_block.scss
+++ b/packages/letters-of-credit/src/stylesheets/sass/components/_block.scss
@@ -4,6 +4,7 @@
   display: flex;
   margin: 0;
   color: #95989a;
+  min-height: 70px;
 }
 
 .BlockLine {
