--- a/packages/letters-of-credit/src/stylesheets/sass/layout/_letterofcredit.scss
+++ b/packages/letters-of-credit/src/stylesheets/sass/layout/_letterofcredit.scss
@@ -114,15 +114,6 @@
   z-index: 999999999;
 }
 
-.blockChainContainer {
-
-}
-
-.bottomHack {
-  display: flex;
-  justify-content: space-between;
-}
-
 .userInfo {
   display: inline-block;
   padding: 2% 0 0 2%;
